# io-graph

./: .gitignore  LICENSE  autogen.py  client_generator.py  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
requirements/: requirements-base.txt
src/iograph/: ODataErrors.py  __init__.py  callRecords.py  externalConnectors.py  identityGovernance.py  search.py  security.py  termStore.py
src/iograph/microsoft/: __init__.py
src/iograph/microsoft/graph/: ODataErrors.py  __init__.py  billing.py  callRecords.py  externalConnectors.py  identityGovernance.py  search.py  security.py  termStore.py
src/iograph/microsoft/graph/partners/: __init__.py  billing.py
src/iograph/partners/: __init__.py  billing.py
